--- a/sass/layout/_description.scss
+++ b/sass/layout/_description.scss
@@ -5,7 +5,7 @@
     line-height: 3em;
     @media (max-width: $phone) {
         line-height: normal;
-        padding: 20% 5%;
+        padding: 18% 5%;
     }
     & h2 {
         @media (max-width: $phone) {
