--- a/sass/layout/_process.scss
+++ b/sass/layout/_process.scss
@@ -1,6 +1,15 @@
 .process {
     margin: 0 5%;
     margin-bottom: 4%;
+    @media (max-width: $phone) {
+        padding: 8% 2%;
+    }
+    & h2 {
+        @media (max-width: $phone) {
+            font-size: 1.6rem;
+            text-align: left;
+        }
+    }
     ul {
         display: flex;
         gap: 8rem;
@@ -9,7 +18,10 @@
         counter-reset: tutoStep;
         list-style: none;
         @media (max-width: $phone) {
+            margin-top: 10%;
             flex-direction: column;
+            gap: 0;
+            row-gap: 30px;
         }
         li {
             padding: 1.5% 2.7%;
@@ -18,6 +30,9 @@
             font-weight: 500;
             box-shadow: $button-shadow;
             position: relative;
+            @media (max-width: $phone) {
+                padding: 9%;
+            }
             &::before {
                 width: 30px;
                 height: 30px;
